
- Added sky dome implementation contributed by Anders la Cour-Harbo (alc).

- In addition to the Cube scene node (formerly test scene node) there is now also a sphere scene node available,
  with an adjustable amount of polygons. Use ISceneManager::addSphereSceneNode to create it.
  Thx to Alfaz93 for making available his code on which this node is based on.

- Fixed Linux keyhandling for many keys.

- The aspect ratio has been inverted in the matrix, which means when setting a new aspect ratio
  for cameras, set it to screen.width/screen.height now instead of screen.height/screen.width
  as previously.

- added support for reading/importing binary .x files.

- .ms3d and .x normals are now correctly transformed in animations, bounding
  boxes are slightly better transformed, but not yet correct.

- Added possibility to load and save Irrlicht scenes to and from xml files via
  ISceneManager::saveScene and ISceneManager::loadScene. Note that not all
  scene nodes are supported yet, but most features should already work.

- Bounding box of the Skybox corrected (set to null)

- The SMaterial structure now supports 4 textures. (Currently ignored by the renderers and their materials.)

- Test scene node renamed to CubeSceneNode.

- Added scene node animator factories. This is the same as scene node
  factories, but for scene node animators.

- Added scene node factories. This is an interface making it possible to dynamicly
  create scene nodes. To be able to add custom scene nodes to Irrlicht and
  to make it possible for the scene manager to save and load those external scene nodes, simply
  implement this interface and register it in you scene manager via ISceneManager::
  registerSceneNodeFactory

- Introduced IMeshSceneNode interface with the possibility to set readonly materials to make
  it possible to use the mesh materials directly instead of overriding them. In this way
  it is possible to change the materials of a mesh causing all mesh scene nodes