@@ -295,7 +295,7 @@ int main()
 	/*
 	Now time for testing out the materials. We create a test cube
 	and set the material we created. In addition, we add a text scene node to
-	the cube and a rotatation animator, to make it look more interesting and 
+	the cube and a rotation animator to make it look more interesting and 
 	important. 
 	*/
 
@@ -304,6 +304,7 @@ int main()
 	scene::ISceneNode* node = smgr->addCubeSceneNode(50);
 	node->setPosition(core::vector3df(0,0,0));
 	node->setMaterialTexture(0, driver->getTexture("../../media/wall.bmp"));
+	node->setMaterialFlag(video::EMF_LIGHTING, false);
 	node->setMaterialType((video::E_MATERIAL_TYPE)newMaterialType1);
 
 	smgr->addTextSceneNode(gui->getBuiltInFont(), 
@@ -324,6 +325,7 @@ int main()
 	node = smgr->addCubeSceneNode(50);
 	node->setPosition(core::vector3df(0,-10,50));
 	node->setMaterialTexture(0, driver->getTexture("../../media/wall.bmp"));
+	node->setMaterialFlag(video::EMF_LIGHTING, false);
 	node->setMaterialType((video::E_MATERIAL_TYPE)newMaterialType2);
 
 	smgr->addTextSceneNode(gui->getBuiltInFont(), 
@@ -344,6 +346,7 @@ int main()
 	node = smgr->addCubeSceneNode(50);
 	node->setPosition(core::vector3df(0,50,25));
 	node->setMaterialTexture(0, driver->getTexture("../../media/wall.bmp"));
+	node->setMaterialFlag(video::EMF_LIGHTING, false);
 	smgr->addTextSceneNode(gui->getBuiltInFont(), L"NO SHADER",
 		video::SColor(255,255,255,255), node);
 
