@@ -120,6 +120,7 @@ int main()
 
 	cube->setMaterialTexture(0, driver->getTexture("../../media/wall.bmp"));
 	cube->setMaterialTexture(1, driver->getTexture("../../media/water.jpg"));
+	cube->setMaterialFlag( video::EMF_LIGHTING, false );
 	cube->setMaterialType( video::EMT_REFLECTION_2_LAYER );
 
 	smgr->addSkyBoxSceneNode(
